--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,14 @@
     margin: 0;
     box-sizing: border-box;
 }
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    /* Generic project styles */
+    color: #3a3a3a;
+}
 /*header*/
 header {
     background-color: aqua;
@@ -11,6 +19,8 @@ header {
 /*main content*/
 main {
     background-color: pink;
+    /* Make main element take up any surplus space to push footer down */
+    flex: 1 0 auto;
 }
 /*footer*/
 footer {
