--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,9 @@ body {
 header {
     background-color: aqua;
 }
+h1 {
+    font-family: Oswald, sans-serif;
+}
 /*main content*/
 main {
     background-color: pink;
