--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,6 +46,16 @@ h1 {
 .active {
     border-bottom: 1px solid #3a3a3a;
 }
+/*Navbar styles with dropdown toggle*/
+nav {
+    position: absolute;
+    background-color: #ffffff;
+    width: 100%;
+    padding: 0 1rem;
+    left: 0;
+    box-shadow: 0 2px 2px #3a3a3a;
+    display: none;
+}
 
 /*main content*/
 main {
