--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,10 +73,15 @@ nav {
 
 /*main content*/
 main {
-    background-color: pink;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
+}
+/*Hero image*/
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url(../images/hero-image.webp) no-repeat center center/cover;
 }
 /*footer*/
 
