--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,42 @@ main {
 #cover-text > h3 {
     color: #ffffff;
 }
+#reasons {
+    width: 90%;
+    margin: 20px auto;
+}
+#reasons h2 {
+    margin-bottom: 20px;
+    text-align: center;
+    font-size: 120%;
+}
+#benefits-physical > div,
+#benefits-mental > div {
+    line-height: 20px;
+    margin-bottom: 20px;
+}
+#benefits p {
+    padding: 0 20px;
+}
+hr {
+    border: 1px solid #3a3a3a;
+    margin: 5px 0;
+}
+#circle-cover-bg {
+    background: url("../images/reasons-image.webp") no-repeat top center/cover;
+    height: 90vw;
+    width: 90vw;
+    margin-bottom: 20px;
+    /*Make square into circle*/
+    border-radius: 50%;
+    max-width: 300px;
+    max-width: 300px;
+}
+#benefits-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 /*footer*/
 
 #social-networks {
