--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,10 +194,50 @@ hr {
         width: 300px;
         right: 50px;
     }
+
+    /* Reasons section */
+
+    #benefits-physical,
+    #benefits-mental {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+    }
+    #benefits-physical > div,
+    #benefits-mental > div {
+        width: 75%;
+    }
+    #benefits-mental > div {
+        text-align: end;
+        align-self: flex-end;
+    }
 }
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
     #menu a:hover {
         border-bottom: 1px solid #3a3a3a;
+    }
+    #benefits {
+        display: flex;
+        flex-direction: row;
+    }
+    #benefits-image {
+        order: 0;
+    }
+    #benefits-mental {
+        order: 1;
+    }
+    #benefits-mental > div {
+        align-self: flex-start;
+    }
+    #benefits-physical > div {
+        align-self: flex-end;
+    }
+    #benefits > div {
+        flex: 1;
+    }
+    #circle-cover-bg {
+        width: 250px;
+        height: 250px;
     }
 }
