--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -165,6 +165,14 @@ hr {
 #times h3 {
     color: #fafafa;
 }
+/*Gallery Page*/
+#photos img {
+    width: 100%;
+    line-height: 1em;
+}
+#photos {
+    line-height: 0;
+}
 /*footer*/
 
 #social-networks {
