added column count to the gallery

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,6 +189,14 @@ hr {
     color: #3a3a3a;
 }
 
+/* Media query: large and landscape screen (576px and up) */
+@media screen and (min-width: 576px) {
+    /*Gallery*/
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
 /* Media query: tablets and larger (768px and up) */
 @media screen and (min-width: 768px) {
     /* Header */
@@ -245,6 +253,10 @@ hr {
         text-align: end;
         align-self: flex-end;
     }
+    /*Gallery*/
+    #photos {
+        column-count: 3;
+    }
 }
 /* Large devices (laptops and desktops, 992px and up) */
 @media screen and (min-width: 992px) {
@@ -273,5 +285,9 @@ hr {
     #circle-cover-bg {
         width: 250px;
         height: 250px;
+    }
+    /*Gallery*/
+    #photos {
+        column-count: 4;
     }
 }
