--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,8 @@ main {
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
+    display: flex;
+    flex-direction: column;
 }
 /*Hero image*/
 #hero {
@@ -173,6 +175,48 @@ hr {
 #photos {
     line-height: 0;
 }
+/*sign-up page*/
+#signup {
+    background-image: url(../images/signup-image.webp);
+    background-size: cover;
+    background-position: 75%;
+    flex-grow: 1;
+    padding: 20px 10% 0 10%;
+}
+#signup-form {
+    background-color: rgba(60, 60, 60, 0.6);
+    color: #ffffff;
+    padding: 30px;
+}
+#signup-form h2 {
+    color: #fafafa;
+    padding-bottom: 20px;
+}
+.text-input {
+    color: #fafafa;
+    border: 1px solid #fafafa;
+    border-radius: 2px;
+    background-color: transparent;
+    width: 100%;
+    height: 25px;
+    padding: 0 5px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+.join-button {
+    padding: 15px 32px;
+    background-color: #454b1b;
+    color: #fafafa;
+    border-radius: 2px;
+    font-size: 100%;
+    margin-top: 20px;
+    margin-bottom: 30px;
+}
+.radio-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
 /*footer*/
 
 #social-networks {
@@ -256,6 +300,25 @@ hr {
     /*Gallery*/
     #photos {
         column-count: 3;
+    }
+    /*sign-up page*/
+    #signup {
+        background-position: center;
+        position: relative;
+    }
+    #signup-form {
+        max-width: 400px;
+        position: absolute;
+        left: 10%;
+        top: 150px;
+    }
+    .text-input:hover {
+        border-color: #f16c6b;
+    }
+
+    .join-button:hover {
+        background-color: #fafafa;
+        color: #454b1b;
     }
 }
 /* Large devices (laptops and desktops, 992px and up) */
